--- a/src/resources/model_simulate_page_v2.html
+++ b/src/resources/model_simulate_page_v2.html
@@ -24,40 +24,48 @@
             <table id="layer_conf_val" style="width: 320px;margin-left:40px;margin-top: 5px;border: solid 3px #D6D6D6;">
                 <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
                 <tr style="height: 25px; border: solid 2px #D6D6D6;color: #333;">
-                  <td style="padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                  <td style="border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                  font-size: 14px;
+                  color: #666666;padding-top: 12px;padding-bottom: 12px;text-align: center;">统计指标</td>
+                  <td style="border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                  font-size: 14px;
+                  color: #666666;padding-top: 12px;padding-bottom: 12px;text-align: center;">指标值</td>
+                </tr>
+                <tr style="height: 25px; border: solid 2px #D6D6D6;color: #333;">
+                  <td style="padding-left: 15px;border: solid 2px #D6D6D6;font-family: SourceHanSansCN-Medium;
                   font-size: 14px;
                   color: #666666;padding-top: 12px;padding-bottom: 12px;">膜电位阈值</td>
                   <td id="simulate_vthresh" style="text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
                 </tr>
                 <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;">
-                  <td style="padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                  <td style="padding-left: 15px;border: solid 2px #D6D6D6;font-family: SourceHanSansCN-Medium;
                   font-size: 14px;
                   color: #666666;padding-top: 12px;padding-bottom: 12px;">神经元时间步长</td>
                   <td id="simulate_neuron_dt" style="text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
                 </tr>
                 <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;">
-                  <td style="padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                  <td style="padding-left: 15px;border: solid 2px #D6D6D6;font-family: SourceHanSansCN-Medium;
                   font-size: 14px;
                   color: #666666;padding-top: 12px;padding-bottom: 12px;">突触时间步长</td>
                   <td id="simulate_synapse_dt" style="text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
                 </tr>
                 <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;">
-                  <td  style="padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                  <td  style="padding-left: 15px;border: solid 2px #D6D6D6;font-family: SourceHanSansCN-Medium;
                   font-size: 14px;
                   color: #666666;padding-top: 12px;padding-bottom: 12px;">延迟</td>
                   <td id="simulate_delay" style="text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
                 </tr>
                 <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;">
-                  <td style="padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                  <td style="padding-left: 15px;border: solid 2px #D6D6D6;font-family: SourceHanSansCN-Medium;
                   font-size: 14px;
                   color: #666666;padding-top: 12px;padding-bottom: 12px;">仿真时长</td>
                   <td id="simulate_dura" style="text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
                 </tr>
                 <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;">
-                  <td style="color: #00BE57;padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                  <td style="padding-left: 15px;border: solid 2px #D6D6D6;font-family: SourceHanSansCN-Medium;
                   font-size: 14px;
                   color: #666666;padding-top: 12px;padding-bottom: 12px;">准确率</td>
-                  <td id="simulate_acc" style="color: #00BE57;text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
+                  <td id="simulate_acc" style="color: #e71f1fe0;text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
                 </tr>    
             </table>
           </div>
@@ -127,7 +135,7 @@
               letter-spacing: 1.14px;">脉冲神经网络输出层脉冲</font></div>
             <span style="margin-left: 280px;font-family: SourceHanSansCN-Normal;
             font-size: 14px;
-            color: #23D951;
+            color: #e71f1fe0;
             letter-spacing: 0.8px;">红色标记图像为输出层预测错误</span>
             <div id="model_layers_vis_tab_caption" style="text-align: center;background: rgba(238,238,238,1.00);border: solid 1px #D6D6D6;width: 460px;margin-left: 180px;"><font style="font-family: SourceHanSansCN-Medium;
               font-size: 14px;
