change for snn struct chart

--- a/src/resources/snn_model_page.html
+++ b/src/resources/snn_model_page.html
@@ -445,9 +445,12 @@ body {
                         },
                         tooltip: {}, //提示信息
                         legend: {   //图例组件
-                            top: "0%",   //距离顶部5%
+                            // top: "0%",   //距离顶部5%
                             // bottom: "88%",
                             // left: "5%",
+                            orient:'vertical',
+                            x:'left',
+                            y:'center',
                             data: node_class,
                             formatter: function (name) {
                                 var neuron_num;
@@ -473,7 +476,7 @@ body {
                                         fontSize: 14,
                                         verticalAlign: 'top',
                                         align: 'center',
-                                        padding: [0, 0, 20, 0],
+                                        padding: [0, 0, 5, 0],
                                         color:"#333333",
                                         fontFamily: 'SourceHanSansCN-Normal',
                                         letterSpacing: '0.8px'
