--- a/src/resources/convertor_page_data_v2.html
+++ b/src/resources/convertor_page_data_v2.html
@@ -36,10 +36,10 @@
             <table id="data_general_table" style="width:500px; margin-left:75px;color: #333;margin-top: 30px;">
               <tr style="border: solid 3px;height: 40px;border-color: #D6D6D6;">
                   <td style="background: #EEEEEE;border: solid 2px;border-color: #D6D6D6;padding-top: 20px;padding-bottom: 20px;text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
-                    font-size: 16px;
+                    font-size: 18px;
                     color: #333333;">指标</font></td>
                   <td style="background: #EEEEEE;border: solid 2px;border-color: #D6D6D6;padding-top: 20px;padding-bottom: 20px;text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
-                    font-size: 16px;
+                    font-size: 18px;
                     color: #333333;">指标值</font></td>               
               </tr>
               <tr style="border: solid 3px;height: 40px;border-color: #D6D6D6;">
@@ -47,28 +47,28 @@
                   font-size: 16px;
                   color: #333333;
                   text-align: right;">总数据量</font></td>
-                <td id="total_data_amount" style="font-weight:bolder;text-align: right;padding-right: 15px;padding-top: 20px;padding-bottom: 20px;"></td>
+                <td id="total_data_amount" style="text-align: right;padding-right: 15px;padding-top: 20px;padding-bottom: 20px;"></td>
               </tr>
               <tr style="border: solid 3px;height: 40px;border-color: #D6D6D6;">
                 <td style="padding-left: 15px;border: solid 2px;border-color: #D6D6D6;padding-top: 20px;padding-bottom: 20px;"><font style="font-family: SourceHanSansCN-Normal;
                   font-size: 16px;
                   color: #333333;
                   text-align: right;">测试数据量</font></td>
-                <td id="test_data_amount" style="font-weight: bolder;text-align: right;padding-right: 15px;padding-top: 20px;padding-bottom: 20px;"></td>
+                <td id="test_data_amount" style="text-align: right;padding-right: 15px;padding-top: 20px;padding-bottom: 20px;"></td>
               </tr>
               <tr style="border: solid 3px;height: 40px;border-color: #D6D6D6;">
                 <td style="padding-left: 15px;border: solid 2px;border-color: #D6D6D6;padding-top: 20px;padding-bottom: 20px;"><font style="font-family: SourceHanSansCN-Normal;
                   font-size: 16px;
                   color: #333333;
                   text-align: right;">验证数据量</font></td>
-                <td id="val_data_amount" style="font-weight: bolder;text-align: right;padding-right: 15px;padding-top: 20px;padding-bottom: 20px;"></td>
+                <td id="val_data_amount" style="text-align: right;padding-right: 15px;padding-top: 20px;padding-bottom: 20px;"></td>
               </tr>
               <tr style="border: solid 3px;height: 40px;border-color: #D6D6D6;">
                 <td style="padding-left: 15px;border: solid 2px;border-color: #D6D6D6;padding-top: 20px;padding-bottom: 20px;"><font style="font-family: SourceHanSansCN-Normal;
                   font-size: 16px;
                   color: #333333;
                   text-align: right;">数据类别</font></td>
-                <td id="class_counts" style="font-weight: bolder;text-align: right;padding-right: 15px;padding-top: 20px;padding-bottom: 20px;"></td>
+                <td id="class_counts" style="text-align: right;padding-right: 15px;padding-top: 20px;padding-bottom: 20px;"></td>
               </tr>
             </table>
           </div>
@@ -382,11 +382,11 @@ function sample_img_click(e){
                   scale:true,
                   name:x_axis_name,
                   nameTextStyle:{
-                    color:"#000000"
+                    color:"#999999"
                   },
                   axisLabel:{
                     textStyle:{
-                      color:"#000000"
+                      color:"#999999"
                     },
                     fontFamily: 'Helvetica',
                     fontSize: '12px',
@@ -398,11 +398,11 @@ function sample_img_click(e){
                   scale:true,
                   name:y_axis_name,
                   nameTextStyle:{
-                    color:"#000000"
+                    color:"#999999"
                   },
                   axisLabel:{
                     textStyle:{
-                      color:"#000000"
+                      color:"#999999"
                     },
                     fontFamily: 'Helvetica',
                     fontSize: '12px',
@@ -414,14 +414,14 @@ function sample_img_click(e){
                   name:"",
                   show:false,
                   nameTextStyle:{
-                    color:"#000000"
+                    color:"#999999"
                   },
                   fontFamily: 'Helvetica',
                   fontSize: '12px',
                   axisLabel:{
                     show:false,
                     textStyle:{
-                      color:"#000000"
+                      ccolor:"#999999"
                     },
                     fontFamily: 'Helvetica',
                     fontSize: '12px',
