--- a/src/resources/model_convertor_page_v3.html
+++ b/src/resources/model_convertor_page_v3.html
@@ -224,50 +224,94 @@
                     letter-spacing: 1.14px;">转换过程信息</font></div>
                 <table id="info_simu_table" style="margin-right: auto;margin-top: 60px;display: inline-block;vertical-align: top;color: #333;margin-left: 40px;">
                     <tr style="border: solid 2px #D6D6D6;">
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;background: #EEEEEE;text-align: center;padding-top: 15px;padding-bottom: 15px;">转换指标统计</td>
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;background: #EEEEEE;text-align: center;padding-top: 15px;padding-bottom: 15px;">统计值</td>
+                        <td style="border: solid 2px #D6D6D6;background: #EEEEEE;text-align: center;padding-top: 15px;padding-bottom: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 16px;
+                        color: #666666;">转换指标统计</td>
+                        <td style="border: solid 2px #D6D6D6;background: #EEEEEE;text-align: center;padding-top: 15px;padding-bottom: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 16px;
+                        color: #666666;">统计值</td>
                     </tr>
                     <tr style="border: solid 2px #D6D6D6;">
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;">转换总耗时(秒)</td>
-                        <td id="total_use_time" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;">xxx</td>
+                        <td style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">转换总耗时(秒)</td>
+                        <td id="total_use_time" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">xxx</td>
                     </tr>
                     <tr>
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;">平均激发脉冲次数</td>
-                        <td id="avg_spike" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;">xxx</td>
+                        <td style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">平均激发脉冲次数</td>
+                        <td id="avg_spike" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">xxx</td>
                     </tr>
                     <tr>
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;">激发脉冲次数方差</td>
-                        <td id="std_spike" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;">xxx</td>
+                        <td style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">激发脉冲次数方差</td>
+                        <td id="std_spike" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">xxx</td>
                     </tr>
                     <tr>
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;">连接权重均值</td>
-                        <td id="avg_conn_wt" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;">xxx</td>
+                        <td style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">连接权重均值</td>
+                        <td id="avg_conn_wt" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">xxx</td>
                     </tr>
                     <tr>
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;">连接权重方差</td>
-                        <td id="std_conn_wt" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;">xxx</td>
+                        <td style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">连接权重方差</td>
+                        <td id="std_conn_wt" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">xxx</td>
                     </tr>
                     <tr>
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;">ANN转SNN耗时(秒)</td>
-                        <td id="stage1_time_use" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;">xxx</td>
+                        <td style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">ANN转SNN耗时(秒)</td>
+                        <td id="stage1_time_use" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">xxx</td>
                     </tr>
                     <tr>
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;">预处理耗时(秒)</td>
-                        <td id="stage2_time_use" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;">xxx</td>
+                        <td style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">预处理耗时(秒)</td>
+                        <td id="stage2_time_use" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">xxx</td>
                     </tr>
                     <tr>
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;">参数调优耗时(秒)</td>
-                        <td id="stage3_time_use" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;">xxx</td>
+                        <td style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">参数调优耗时(秒)</td>
+                        <td id="stage3_time_use" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">xxx</td>
                     </tr>
                     <tr>
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;">DarwinLang文件生成耗时(秒)</td>
-                        <td id="stage4_time_use" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;">xxx</td>
+                        <td style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-left: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">DarwinLang文件生成耗时(秒)</td>
+                        <td id="stage4_time_use" style="border: solid 2px #D6D6D6;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;text-align: right;padding-left: 80px;font-family: SourceHanSansCN-Medium;
+                        font-size: 14px;
+                        color: #666666;">xxx</td>
                     </tr>
                 </table>
                 <table id="scale_factors_table" style="margin-right: auto;margin-top: 60px;display: inline-block;vertical-align: top;border-spacing: 0px 5px;margin-left: 20px;color: #333;">
                     <tr style="border: solid 2px #D6D6D6;">
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;background: #EEEEEE;text-align: center;padding-top: 15px;padding-bottom: 15px;">神经层</td>
-                        <td style="font-size: small;font-weight: bold;border: solid 2px #D6D6D6;background: #EEEEEE;text-align: center;padding-top: 15px;padding-bottom: 15px;">参数缩放系数</td>
+                        <td style="border: solid 2px #D6D6D6;background: #EEEEEE;text-align: center;padding-top: 15px;padding-bottom: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 16px;
+                        color: #666666;">神经层</td>
+                        <td style="border: solid 2px #D6D6D6;background: #EEEEEE;text-align: center;padding-top: 15px;padding-bottom: 15px;font-family: SourceHanSansCN-Medium;
+                        font-size: 16px;
+                        color: #666666;">参数缩放系数</td>
                     </tr>
                     <!-- <tr style="height: 35px;margin-top: 0px;">
                         <td style="width: 100px;font-size: small;font-weight: bold;">层<br/>00Conv2D_26x26x8 参数缩放系数</td>
@@ -575,13 +619,14 @@ let log_output_lists = new Array();
                     table_line.style.border = "solid 2px #D6D6D6";
                     table_line.style.color = "#333";
                     let line_td1 = document.createElement("td");
-                    line_td1.style.fontSize = "small";
-                    line_td1.style.fontWeight = "bold";
                     line_td1.style.border = "solid 2px #D6D6D6";
                     line_td1.style.paddingTop = '15px';
                     line_td1.style.paddingBottom = '15px';
                     line_td1.style.paddingLeft = '10px';
                     line_td1.style.paddingRight = '80px';
+                    line_td1.style.fontFamily = 'SourceHanSansCN-Medium';
+                    line_td1.style.fontSize = '14px';
+                    line_td1.style.color = '#666666';
                     line_td1.innerHTML = ""+obj;
                     table_line.appendChild(line_td1);
                     let line_td2 = document.createElement("td");
@@ -591,6 +636,9 @@ let log_output_lists = new Array();
                     line_td2.style.paddingRight = '10px';
                     line_td2.style.paddingLeft = '80px';
                     line_td2.style.textAlign = 'right';
+                    line_td2.style.fontFamily = 'SourceHanSansCN-Medium';
+                    line_td2.style.fontSize = '14px';
+                    line_td2.style.color = '#666666';
                     line_td2.innerText = parseFloat(scale_fac[obj]).toFixed(3);
                     table_line.appendChild(line_td2);
                     document.getElementById("scale_factors_table").appendChild(table_line);
@@ -718,7 +766,7 @@ let log_output_lists = new Array();
                     },
                     axisLabel:{
                         rotate:30,
-                        color:"black"
+                        color:"#999999"
                     }
                 }
             ],
@@ -727,13 +775,13 @@ let log_output_lists = new Array();
                     type: 'value',
                     name: '时长(秒)',
                     nameTextStyle:{
-                        color:"black"
+                        color:"#999999"
                     },
                     scale:true,
                     axisLabel: {
                         formatter: '{value}',
                         textStyle:{
-                            color:"black"
+                            color:"#999999"
                         }
                     }
                 }
@@ -750,7 +798,7 @@ let log_output_lists = new Array();
                                 show: true, //开启显示
                                 position: 'top', //在上方显示
                                 textStyle: { //数值样式
-                                    color: 'black',
+                                    color:"#999999",
                                     fontSize: 16
                                 }
                             },
