--- a/src/resources/model_simulate_page_v2.html
+++ b/src/resources/model_simulate_page_v2.html
@@ -25,10 +25,10 @@
                 <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
                 <tr style="height: 25px; border: solid 2px #D6D6D6;color: #333;">
                   <td style="border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
-                  font-size: 14px;
+                  font-size: 16px;
                   color: #666666;padding-top: 12px;padding-bottom: 12px;text-align: center;">统计指标</td>
                   <td style="border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
-                  font-size: 14px;
+                  font-size: 16px;
                   color: #666666;padding-top: 12px;padding-bottom: 12px;text-align: center;">指标值</td>
                 </tr>
                 <tr style="height: 25px; border: solid 2px #D6D6D6;color: #333;">
@@ -80,13 +80,13 @@
             <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
             <tr style="height: 25px; border: solid 2px #D6D6D6;color: #333;">
               <td style="text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
-              font-size: 14px;
+              font-size: 16px;
               color: #666666;padding-top: 12px;padding-bottom: 12px;">层编号</td>
               <td style="text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
-              font-size: 14px;
+              font-size: 16px;
               color: #666666;padding-top: 12px;padding-bottom: 12px;">放电次数均值</td>
               <td style="text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
-              font-size: 14px;
+              font-size: 16px;
               color: #666666;padding-top: 12px;padding-bottom: 12px;">放电次数方差</td>
             </tr>
           </table>
@@ -101,8 +101,8 @@
             <div style="width: 360px;margin-left: 40px;margin-top: 20px;">
               <form class="form-horizontal" role="form">
                 <div class="form-group">
-                  <label class="control-label col-md-8" for="select_which_layer"><font style="font-family: PingFangSC-Regular;
-                    font-size: 14px;
+                  <label class="control-label col-md-8" for="select_which_layer"><font style="font-family: PingFangSC-Regular;font-weight: normal;
+                    font-size: 16px;
                     color: #000000;
                     text-align: left;">选择神经元层</font></label>
                   <div class="col-md-4">
@@ -525,6 +525,7 @@ body {
                     td_id.style.color = '#333333';
                     td_id.style.textAlign = 'right';
                     td_id.style.paddingRight = '15px';
+                    td_id.style.textAlign = 'center';
                     td_id.style.border = "solid 2px #D6D6D6";
                     td_id.style.paddingTop = '12px';
                     td_id.style.paddingBottom = '12px';
@@ -647,11 +648,11 @@ body {
                     data: labels,
                     name: "类别",
                     nameTextStyle:{
-                      color:"black"
+                      color:"#999999"
                     },
                     axisLabel:{
                       textStyle:{
-                          color:"black"
+                        color:"#999999"
                       }
                    }
                 },
@@ -660,12 +661,12 @@ body {
                     scale:true,
                     name:"时间(brian2 ms)",
                     nameTextStyle:{
-                      color:"black"
+                      color:"#999999"
                     },
                     axisLabel: {
                         formatter: '{value}',
                         textStyle:{
-                            color:"black"
+                          color:"#999999"
                         }
                     }
                 },
@@ -697,11 +698,11 @@ body {
                     data: labels,
                     name: "ID",
                     nameTextStyle:{
-                      color:"black"
+                      color:"#999999"
                     },
                     axisLabel:{
                       textStyle:{
-                          color:"black"
+                        color:"#999999"
                       }
                    }
                 },
@@ -710,12 +711,12 @@ body {
                     scale:true,
                     name:"时间(brian2 ms)",
                     nameTextStyle:{
-                      color:"black"
+                      color:"#999999"
                     },
                     axisLabel: {
                         formatter: '{value}',
                         textStyle:{
-                            color:"black"
+                          color:"#999999"
                         }
                     }
                 },
@@ -737,7 +738,7 @@ body {
               legend:{
                 data:["脉冲激发次数最少的神经元膜电位", "脉冲激发次数最多的神经元膜电位"],
                 textStyle:{
-                  color:"black"
+                  color:"#999999"
                 }
               },
               grid:{
@@ -750,11 +751,11 @@ body {
                   name:"时间",
                   nameGap:40,
                   nameTextStyle:{
-                    color:"black"
+                    color:"#999999"
                   },
                   axisLabel:{
                     textStyle:{
-                      color:"black"
+                      color:"#999999"
                     }
                   }
               },
@@ -764,11 +765,11 @@ body {
                     scale:true,
                     name:"膜电位(左)",
                     nameTextStyle:{
-                      color:"black"
+                      color:"#999999"
                     },
                     axisLabel:{
                       textStyle:{
-                        color:"black"
+                        color:"#999999"
                       }
                     }
                 },
@@ -777,11 +778,11 @@ body {
                     scale:true,
                     name:"膜电位(右)",
                     nameTextStyle:{
-                      color:"black"
+                      color:"#999999"
                     },
                     axisLabel:{
                       textStyle:{
-                        color:"black"
+                        color:"#999999"
                       }
                     } 
                 }
