add segmentation task data vis page

--- a/src/resources/convertor_page_v2.html
+++ b/src/resources/convertor_page_v2.html
@@ -72,6 +72,7 @@ color: #999999;
 letter-spacing: 0;
 line-height: 14px;">
                             <option>图像分类</option>
+                            <option>语义分割</option>
                             <option>语音识别</option>
                             <option>目标检测</option>
                         </select>
