--- a/src/resources/convertor_page_data_v2.html
+++ b/src/resources/convertor_page_data_v2.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="loading-div">
-        <i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="display: block;margin-left: 50vw;"></i>
+        <i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="display: block;margin-left: 50vw;color: #333;"></i>
         <span style="color: #333;height: 50px;width: 120px;margin-left: calc(50vw - 20px);display: block;"><font style="color: #333;font-weight: bolder;">数据信息加载中...</font></span>
       </div>
 
