--- a/src/resources/snn_model_page.html
+++ b/src/resources/snn_model_page.html
@@ -9,7 +9,7 @@
 <body class="dark-mode" style="height: 100%;width: 100%;white-space: nowrap;overflow: auto;">
 
   <div class="loading-div">
-    <i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="display: block;margin-left: 50vw;"></i>
+    <i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="display: block;margin-left: 50vw;color: #333;"></i>
     <span style="color: #333;height: 50px;width: 120px;margin-left: calc(50vw - 20px);display: block;"><font style="color: #333;font-weight: bolder;">数据信息加载中...</font></span>
   </div>
 
