--- a/src/resources/convertor_page_v2.html
+++ b/src/resources/convertor_page_v2.html
@@ -172,7 +172,7 @@ line-height: 14px;">
 font-size: 22px;
 color: #999999;
 letter-spacing: 0;
-line-height: 14px;">
+line-height: 14px;" readonly='readonly'>
                     </div>
                     <div style="margin-top: 20px;">
                         <label for="select_type_refac" style="font-family: SourceHanSansCN-Normal;
@@ -310,6 +310,7 @@ body {
         document.getElementById("alert_sheet").style.display = "none";
         document.getElementById("project_name").style.borderColor = '#D9D9D9';
         document.getElementById("lb_project_name").style.color = '#333333';
+        vscode.postMessage(JSON.stringify({"select_save_proj_path_req":$("#project_name").val()}));
        });
 
         $("#create").on("click",function(){
