fix and seperate binary files generating

--- a/src/resources/convertor_page_v2.html
+++ b/src/resources/convertor_page_v2.html
@@ -310,7 +310,7 @@ body {
         document.getElementById("alert_sheet").style.display = "none";
         document.getElementById("project_name").style.borderColor = '#D9D9D9';
         document.getElementById("lb_project_name").style.color = '#333333';
-        vscode.postMessage(JSON.stringify({"select_save_proj_path_req":$("#project_name").val()}));
+        vscode.postMessage(JSON.stringify({"select_save_proj_path_req":$("#project_name").val(), "is_change_proj_name":true}));
        });
 
         $("#create").on("click",function(){
