--- a/src/resources/convertor_page_v2.html
+++ b/src/resources/convertor_page_v2.html
@@ -74,7 +74,7 @@ line-height: 14px;">
                             <option>图像分类</option>
                             <option>语义分割</option>
                             <option>语音识别</option>
-                            <option>目标检测</option>
+                            <option>疲劳检测</option>
                         </select>
                     </div>
                     <div class="form-group" style="margin-top: 20px;">
@@ -190,6 +190,7 @@ line-height: 14px;">
                             <option>图像分类</option>
                             <option>语音识别</option>
                             <option>目标检测</option>
+                            <option>疲劳检测</option>
                         </select>
                     </div>
                     <div class="form-group" style="margin-top: 20px;">
