change start page background

--- a/src/resources/convertor_page_v2.html
+++ b/src/resources/convertor_page_v2.html
@@ -244,8 +244,36 @@ line-height: 14px;">
 	</div><!-- /.modal -->
 </div>
 
+<!-- 背景主界面 -->
+<div id="login" class="login_body_bg">
+  <div style="line-height: normal;margin: auto;">
+      <img src="http://127.0.0.1:6003/src/img/zhijiang-logo.png" alt="zhejiang lab" style="vertical-align: middle;"/>
+      <span style="vertical-align: middle;color: #333;margin-left: 100px;">达尔文类脑应用集成开发环境</span>
+      <img src="http://127.0.0.1:6003/src/img/zheda-logo.png" alt="zhejiang university" style="vertical-align: middle;margin-left: 100px;"/>
+  </div>
+
+</div>
+
 </body>
 <style>
+
+.login_body_bg {
+  text-align: center;
+}
+
+.login_body_bg::after {
+    content: "";
+    background: url("http://127.0.0.1:6003/src/img/zhijiang.png");
+    opacity: 0.3;
+    top: 25px;
+    left: 25px;
+    bottom: 25px;
+    right: 25px;
+    position: absolute;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
 
 .editor-sidenav{
   background-color: #333;
